# avk

./: .gitignore  Cargo.toml  README.md  avk.h  build.rs  icon.png~  icon1.avkres
avk/: Cargo.toml  bindings.h
avk-convert/: Cargo.toml  index.html
avk-convert/src/: main.rs
avk-pong/: Cargo.toml
avk-pong/src/: icon0.avkres  lib.rs
avk-run/: Cargo.toml
avk-run/src/: avk_backend.rs  backend.rs  c_binds.rs  gk.rs  lib.rs  logchamp.rs  main.rs  render.rs  sdl.rs
avk-run/src/gk/: mesh.rs
avk-run/src/render/: material.rs  mesh.rs  texture.rs
avk-run/src/sdl/: window.rs
avk-runner/: Cargo.toml  build.rs  wrapper.h
avk-runner/src/: gk.rs  lib.rs  main.rs
avk-runner/src/gk/: material.rs  texture.rs
avk-runner/src/sdl/: sys.rs
avk-runner/src/shaders/: quad_vert.glsl
avk-types/: Cargo.toml
avk-types/src/: lib.rs  prelude.rs
avk/src/: avk.rs  image.rs  lib.rs  palette.rs  prelude.rs  sprite.rs
demo-c/: hi0.avkres  hi0.h  hi1.avkres  hi1.h  hi2.avkres  hi2.h  hi3.h  main.c
examples/: ball0.avkres  paddle0.avkres  paddle1.avkres  pong.rs
pong/: Cargo.toml
pong/src/: lib.rs
sample-project/src/: lib.rs  paddle0.avkres
src/: gk.rs  gl.rs  icon0.avkres  icon1.avkres  input.rs  lib.rs  prelude.rs  sdl.rs  tests.rs
src/gk/: material.rs  mesh.rs  texture.rs
src/sdl/: window.rs
src/shaders/: frag.glsl  quad_frag.glsl  vert.glsl  view_vert.glsl  viewport_frag.glsl
