[workspace]
resolver = "2"
members = [
    # The AVK ROM runner
    "avk-runner",
    # Flat api
    "avk",
    # CLI tool to intake PNG images into AVK resources.
    "avk-convert", "sample-project",
]

[profile.release.package.'*']
opt-level = "z"
strip = true
codegen-units = 1

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
