[package]
name = "avk-run"
version = "1.0.0"
edition = "2021"

[build-dependencies]
bindgen = "0.70.1"

[dependencies]
gl = "0.14.0"
avk-types = { path = "../avk" }
dlopen2 = "0.7.0"
log = "0.4.22"

#[profile.dev.package.'*']
#opt-level = 3
[profile.release.package.'*']
opt-level = "z"
strip = true
codegen-units = 1

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"